# bonsai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  PLAN_OLD.md  README.md  build.rs  demo.ipynb
.github/workflows/: ci.yml
assets/: gen_model.py  model.onnx
assets/debugging/: README.md  compare_single_row.py  verify_alignment.py
assets/tests/: README.md
assets/tests/catboost/multiclass/: generate.py
assets/tests/catboost/regression/: generate.py
assets/tests/catboost/regression_categorical/: generate.py
assets/tests/catboost/regression_onehot/: generate.py
assets/tests/common/: __init__.py  generators.py  test_harness.rs.template  test_harness_multiclass.rs.template  validators.py
assets/tests/h2o_mojo/: requirements.txt
assets/tests/h2o_mojo/classification_categorical/: generate.py
assets/tests/h2o_mojo/classification_numeric/: generate.py
assets/tests/h2o_mojo/regression_categorical/: generate.py
assets/tests/h2o_mojo/regression_numeric/: generate.py
assets/tests/lightgbm/: requirements.txt
assets/tests/lightgbm/classification_multiclass/: generate.py
assets/tests/lightgbm/classification_numeric/: generate.py
assets/tests/lightgbm/regression_numeric/: generate.py
assets/tests/sklearn_onnx/: requirements.txt
assets/tests/sklearn_onnx/classification_categorical/: generate.py
assets/tests/sklearn_onnx/classification_numeric/: generate.py
assets/tests/sklearn_onnx/regression_categorical/: generate.py
assets/tests/sklearn_onnx/regression_numeric/: generate.py
assets/tests/xgboost/: requirements.txt
assets/tests/xgboost/classification_multiclass/: generate.py
assets/tests/xgboost/classification_numeric/: generate.py
assets/tests/xgboost/regression_categorical/: generate.py
assets/tests/xgboost/regression_numeric/: generate.py
benches/: catboost.rs  inference.rs  xgboost.rs
examples/xgboost_benchmark/: README.md  generate.py  requirements.txt
scripts/: generate_all_fixtures.py  generate_all_fixtures.sh
src/: emit_crate.rs  inspector.rs  interpreter.rs  ir.rs  main.rs  testutil.rs  verify.rs
src/backends/: mod.rs  rust.rs  rust_array.rs
src/frontends/: catboost.rs  lightgbm.rs  mod.rs  mojo.rs  onnx.rs  xgboost.rs
src/parsers/: ini.rs  mod.rs  tree_parser.rs
tests/: emit_crate_test.rs  h2o3_integration.rs  integration_test.rs  verify_test.rs
