[package]
name = "bonsai"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = ["Brandon Greenwell <greenwell.brandon@gmail.com>"]
description = "A tree ensemble model transpiler (XGBoost, LightGBM, CatBoost) to standalone Rust."
license = "MIT"
default-run = "bonsai"
keywords = ["machine-learning", "xgboost", "lightgbm", "catboost", "transpiler"]
categories = ["science", "development-tools"]
repository = "https://github.com/bgreenwell/bonsai"
homepage = "https://github.com/bgreenwell/bonsai"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# ONNX protobuf runtime
prost = "0.12"

# Code generation
quote = "1.0"
proc-macro2 = "1.0"

# MOJO archive + binary parsing
zip = "0.6"
byteorder = "1.5"

# JSON model formats (XGBoost, LightGBM, CatBoost)
serde_json = "1.0"

# Scratch dirs for `bonsai verify` compile-and-score runs
tempfile = "3"

# Scorer - optional, heavy
polars = { version = "0.37", features = ["lazy", "parquet", "csv"], optional = true }
rayon  = { version = "1.10",    optional = true }

[features]
default = []
scorer  = ["polars", "rayon"]
# Benches include! generated model sources that only exist after running the
# fixture/example generation scripts, so they are opt-in.
bench-models = []

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ort = "2.0.0-rc.12"
ndarray = "0.17"

[[bench]]
name = "inference"
harness = false
required-features = ["bench-models"]

[[bench]]
name = "xgboost"
harness = false
required-features = ["bench-models"]

[[bench]]
name = "catboost"
harness = false
required-features = ["bench-models"]

[[bin]]
name = "bonsai"
path = "src/main.rs"

[[bin]]
name = "polars_score"
path = "src/bin/polars_score.rs"
required-features = ["scorer"]

[profile.release]
lto = true
codegen-units = 1
